<resources>
    <string name="app_name">iEat</string>
    <string name="forgot_password">Forgot password</string>
    <string name="developed_by">Developed by iEat Inc.</string>
    <string name="create_user">CREATE USER</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="enter_name">Username</string>
    <string name="create_account">Create account</string>
    <string name="home_choose_restaurant">Choose a restaurant</string>
    <string name="home_restaurant_poor">Restaurant \"Poor\"</string>
    <string name="home_restaurant_poorer">Restaurant \"Poorer\"</string>
    <string name="home_restaurant_the_poorest">Restaurant \"The poorest\"</string>
    <string name="home_new_rest">New</string>
    <string name="new_restaurant">New restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="create_restaurant">Add restaurant</string>
    <string name="forgot_password_phone_authentication"><u>Forgot password (Phone authentication)</u></string>
    <string name="forgot_password_email_authentication"><u>Forgot password (Email authentication)</u></string>
    <string name="send_the_code"><u>Send the code</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_storage">Create storage</string>
    <string name="storage_name">Storage name</string>
    <string name="storage_tag">Storage tag</string>
    <string name="storage_size">Storage size</string>
    <string name="add_storage">Add storage</string>
    <string name="create_employee">Create employee</string>
    <string name="employee_username">Username</string>
    <string name="employee_email">Email</string>
    <string name="employee_phone_number">Phone number</string>
    <string name="employee_password">Password</string>
    <string name="employee_confirm_password">Confirm password</string>
    <string name="create_shelf">Create shelf</string>
    <string name="add_shelf">Add shelf</string>
    <string name="storage1">Storage1</string>
    <string name="new_shelf">New shelf</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name</string>
    <string name="expiration_date">Expiration date</string>
    <string name="amount">Amount</string>
    <string name="shelf_add_product">Add product</string>
    <string-array name="employee_types">
        <item>Manager</item>
        <item>Employee</item>
    </string-array>
    <string-array name="units_of_measurements">
        <item>kg</item>
        <item>l</item>
        <item>pc</item>

    </string-array>


</resources>