<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/background_triangle5"
        android:layout_width="677dp"
        android:layout_height="672dp"
        android:layout_marginTop="-230dp"
        android:layout_marginEnd="-300dp"
        android:rotation="65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/triangle" />

    <TextView
        android:id="@+id/new_rest_header"
        android:layout_width="233dp"
        android:layout_height="86dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/fredokaone"
        android:text="@string/new_restaurant"
        android:textAlignment="textEnd"
        android:textColor="@color/secondary_green"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/new_rest_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintBottom_toBottomOf="@+id/new_rest_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_rest_header"
        app:srcCompat="@drawable/ic_left_arrow" />

    <EditText
        android:id="@+id/NewRestaurant_rest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/robotoflex"
        android:hint="@string/restaurant_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_rest_header"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/NewRestaurant_reg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/robotoflex"
        android:hint="@string/restaurant_name"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRestaurant_rest_name"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/NewRestaurant_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/et_custom"
        android:fontFamily="@font/robotoflex"
        android:hint="@string/restaurant_name"
        android:inputType="textPostalAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textAlignment="viewStart"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRestaurant_reg_number"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
        android:id="@+id/NewRestaurant_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="106dp"
        android:background="@drawable/bt_custom"
        android:text="@string/create_restaurant"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRestaurant_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="137dp"
        android:text="@string/developed_by"
        android:textAlignment="center"
        android:textColor="#8FD14E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewRestaurant_button">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>
