<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StorageActivity">

    <ImageView
        android:id="@+id/storage_background_triangle"
        android:layout_width="677dp"
        android:layout_height="672dp"
        android:layout_marginTop="-230dp"
        android:layout_marginEnd="-300dp"
        android:rotation="65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/triangle" />


    <TextView
        android:id="@+id/storage_header"
        android:layout_width="235dp"
        android:layout_height="86dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/fredokaone"
        android:text="@string/storage1"
        android:textAlignment="textEnd"
        android:textColor="@color/secondary_green"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/storage_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintBottom_toBottomOf="@+id/storage_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/storage_header"
        app:srcCompat="@drawable/ic_left_arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/developed_by"
        android:textAlignment="center"
        android:textColor="#8FD14E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>
    <Button
        android:id="@+id/storage_new_shelf"
        android:layout_width="133dp"
        android:layout_height="69dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/home_bt_custom"
        android:text="@string/new_shelf"
        android:textColor="@color/secondary_green"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_plus"
        app:iconPadding="10dp"
        app:iconTint="@color/secondary_green"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

    </Button>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storage_storages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage_header">

    </androidx.recyclerview.widget.RecyclerView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/storage_loading_anim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toTopOf="@+id/storage_new_shelf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage_header"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation2" />

</androidx.constraintlayout.widget.ConstraintLayout>